--- a/templates/error.html
+++ b/templates/error.html
@@ -2,9 +2,54 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>出错了</title>
+    <title>Error</title>
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link href="../static/css/style.css" rel="stylesheet">
 </head>
+
 <body>
-    你要访问的页面不存在...
+    <header>
+        <nav class="navbar-dark fixed-top bg-dark" style="border-radius: 0 0 10px 10px;">
+            <div class="navigator">
+                <div style="display: flex;">
+                    <img src="../static/pic/CuSell_icon.jpeg" alt="Icon" height="30px" width="30px" style="margin-top: 4.5px; margin-left: 10px; margin-right: 3px; border-radius: 5px;">
+                    <a class="navbar-brand" href="mainpage.html" style="padding-top: 0px; padding-bottom: 0;">
+                        <b><span style="color: purple; font-size: x-large;">Cu</span><span style="color: orange; font-size: x-large;">Sell</span></b>
+                    </a>
+                    <ul class="nav">
+                        <li><a href="mainpage.html" class="nav-link px-2 text-white top_item">Home</a></li>
+                        <li><a href="#" class="nav-link px-2 text-white top_item">Profile</a></li>
+                        <li><a href="#" class="nav-link px-2 text-white top_item">Liked</a></li>
+                        <li><a href="#" class="nav-link px-2 text-white top_item">Chat</a></li>
+                        <li><a target="_blank" href="https://github.com/1155141394/CuSell" class="nav-link px-2 text-white top_item">About Us</a></li>
+                    </ul>
+            </div>
+        </nav>
+    </header>
+
+    <div class="body-container">
+    <div class="card-box">
+        <div class="error-message" style="text-align: center;">
+            <svg color="orange" xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-exclamation-triangle" viewBox="0 0 16 16">
+                <path d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.146.146 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.163.163 0 0 1-.054.06.116.116 0 0 1-.066.017H1.146a.115.115 0 0 1-.066-.017.163.163 0 0 1-.054-.06.176.176 0 0 1 .002-.183L7.884 2.073a.147.147 0 0 1 .054-.057zm1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566z"/>
+                <path d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995z"/>
+            </svg>
+            <p><b>Error!</b></p>
+        </div>
+        <p style="margin-top: 10px; font-size: xx-large;"><b>The Page You Requested Is Not Availiable</b></p>
+        <a href="mainpage.html">Go back to main page</a>
+    </div>
+    </div>
+
+    <div style="width: 100%; height: 90%; position: fixed; z-index: -1; display: flex; justify-content: flex-end; align-items: flex-end;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="500" height="500" fill="currentColor" class="bi bi-bag-heart" viewBox="0 0 16 16" style="opacity: 0.4; color: orange">
+            <path fill-rule="evenodd" d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5Zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0ZM14 14V5H2v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1ZM8 7.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
+        </svg>
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" width="500" height="500" fill="currentColor" class="bi bi-cart-check-fill" viewBox="0 0 16 16" style="opacity: 0.3; position:fixed ; z-index: -1; left: 10px; top: 30px; color: purple">
+        <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-1.646-7.646-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L8 8.293l2.646-2.647a.5.5 0 0 1 .708.708z"/>
+    </svg>
+
 </body>
+
 </html>
