--- a/templates/icon.html
+++ b/templates/icon.html
@@ -2,23 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Registrition</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href="css/style.css" rel="stylesheet">
-    <script src="js/bootstrap.bundle.js"></script>
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
+    <title>Icon</title>
+    <link href="../static/css/style.css" rel="stylesheet">
 </head>
 
 <body style="display: flex; justify-content: center;">
-    <div class="icon-container">
+    <div class="icon-container" style="width: 400px; height: 400px;">
+        <div class="zero-layer">
+            <svg color="rgba(70, 70, 70, 0.2)" xmlns="http://www.w3.org/2000/svg" width="100" hight="100" fill="currentColor" class="bi bi-bag-heart-fill" viewBox="0 0 16 16">
+                <path d="M11.5 4v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5ZM8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1Zm0 6.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
+            </svg>
+        </div>
         <div class="first-layer">
-            <img src="pic/CuSell_icon.jpeg" alt="Icon" width="200" height="200">
+            <img src="../static/pic/CuSell_icon.jpeg" alt="Icon">
         </div>
-        <div class="second-layer">
-        </div>
+        <div class="second-layer"></div>
         <div class="third-layer">
-        <img src="pic/CuSell_icon.png" alt="1">
+            <svg  color="rgba(70, 70, 70, 0.2)" xmlns="http://www.w3.org/2000/svg" width="100" hight="100" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+            </svg>
+        </div>
+        <div class="forth-layer">
+        <img src="../static/pic/CuSell_icon.png" alt="1">
         </div>
         
     </div>
