--- a/templates/registration.html
+++ b/templates/registration.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>Registrition</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <link href="/static/css/style.css" rel="stylesheet">
-    <script src="/static/js/bootstrap.bundle.js"></script>
-    <script src="/static/js/jquery-3.6.0.min.js"></script>
-    <script src="/static/js/jquery.validate.min.js"></script>
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link href="../static/css/style.css" rel="stylesheet">
+    <script src="../static/js/bootstrap.bundle.min.js"></script>
+    <script src="../static/js/jquery-3.6.0.min.js"></script>
+    <script src="../static/js/jquery.validate.min.js"></script>
 </head>
 
 <body>
@@ -15,11 +15,12 @@
         <nav class="navbar-dark fixed-top bg-dark" style="border-radius: 0 0 10px 10px;">
             <div class="navigator">
                 <div style="display: flex;">
-                    <a class="navbar-brand" href="mainpage.html" style="padding-top: 0px; padding-bottom: 0; margin-left: 10px;">
+                    <img src="../static/pic/CuSell_icon.jpeg" alt="Icon" height="30px" width="30px" style="margin-top: 4.5px; margin-left: 10px; margin-right: 3px; border-radius: 5px;">
+                    <a class="navbar-brand" href="/mainpage" style="padding-top: 2px; padding-bottom: 0;">
                         <b><span style="color: purple; font-size: x-large;">Cu</span><span style="color: orange; font-size: x-large;">Sell</span></b>
                     </a>
                     <ul class="nav">
-                        <li><a href="mainpage.html" class="nav-link px-2 text-white top_item">Home</a></li>
+                        <li><a href="/mainpage" class="nav-link px-2 text-white top_item">Home</a></li>
                         <li><a href="#" class="nav-link px-2 text-white top_item">Profile</a></li>
                         <li><a href="#" class="nav-link px-2 text-white top_item">Liked</a></li>
                         <li><a href="#" class="nav-link px-2 text-white top_item">Chat</a></li>
@@ -27,14 +28,14 @@
                     </ul>
                 </div>
                 <div style="padding-right: 10px;">
-                    <button type="button" class="btn btn-secondary me-2">
+                    <button type="button" class="btn btn-secondary me-2" onclick="window.open('/login', '_self')">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-box-arrow-in-right" viewBox="3 2 13.5 13.5">
                             <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0v-2z"/>
                             <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
                         </svg>
                         Login
                     </button>
-                    <button type="button" class="btn btn-primary" onclick="window.open('registration.html', '_self')">
+                    <button type="button" class="btn btn-primary" onclick="window.open('/registration', '_self')">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0.5 16 16">
                             <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                             <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
@@ -55,7 +56,28 @@
     </svg>
     
     <div class="img_box">
-        <img src="/static/pic/CuSell.png" alt="CuSell" height="200px" width="400px">
+        <div style="height: 150px; width: 150px; margin-top: 10px;">
+            <div class="icon-container">
+                <div class="zero-layer">
+                    <svg color="rgba(70, 70, 70, 0.2)" xmlns="http://www.w3.org/2000/svg" width= "100" height= "100"fill="currentColor" class="bi bi-bag-heart-fill" viewBox="0 0 16 16">
+                        <path d="M11.5 4v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5ZM8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1Zm0 6.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
+                    </svg>
+                </div>
+                <div class="first-layer">
+                    <img src="../static/pic/CuSell_icon.jpeg" alt="Icon">
+                </div>
+                <div class="second-layer"></div>
+                <div class="third-layer">
+                    <svg  color="rgba(70, 70, 70, 0.2)" xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                    </svg>
+                </div>
+                <div class="forth-layer">
+                <img src="../static/pic/CuSell_icon.png" alt="1">
+                </div>
+            </div>
+        </div>
+        <img class="cu_img" src="../static/pic/CuSell_glow.png" alt="CuSell" height="200px" width="400px">
     </div>
     
     <div>
@@ -107,9 +129,19 @@
                 </div>
 
                 <div class="d-grid gap-2">
-                    <button id="submit-button" type="submit" class="btn btn-primary disabled mb-2">Submit</button>
+                    <button id="submit-button" type="submit" class="disabled btn btn-primary mb-2">Submit</button>
                 </div>
                 
+                <script>
+                    $("#submit-button").click(function(){
+                        var userName = $("#userName").val();
+                        var email = $("#inputEmail").val();
+                        var passwd = $("#confirmPassword").val();
+                        window.location.href = "/mainpage";
+                        return false;
+                    });
+                </script>
+
             </form>
         </div> 
     </div>
@@ -154,7 +186,7 @@
                     equalTo: "Two passwords are not the same."
                 },
                 agree:{
-                    required: "Please click",
+                    required: "Please confirm",
                 }
             },
             errorElement: "div",
@@ -170,7 +202,8 @@
                 $(element).addClass("is-invalid").removeClass("is-valid");
                 if($("#inputPassword").hasClass("is-invalid") || 
                     $("#confirmPassword").hasClass("is-invalid") ||
-                    $("#inputEmail").hasClass("is-invalid")){
+                    $("#inputEmail").hasClass("is-invalid") || 
+                    $("#inputName").hasClass("is-invalid")){
                         $("#submit-button").addClass("disabled");
                 };
             },
@@ -178,7 +211,8 @@
                 $(element).addClass("is-valid").removeClass("is-invalid");
                 if($("#inputPassword").hasClass("is-valid") && 
                     $("#confirmPassword").hasClass("is-valid") && 
-                    $("#inputEmail").hasClass("is-valid")){
+                    $("#inputEmail").hasClass("is-valid") && 
+                    $("#userName").hasClass("is-valid")){
                         $("#submit-button").removeClass("disabled");
                 };
             }
