--- a/templates/icon.html
+++ b/templates/icon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Icon</title>
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="../../../static/css/style.css" rel="stylesheet">
 </head>
 
 <body style="display: flex; justify-content: center;">
@@ -14,7 +14,7 @@
             </svg>
         </div>
         <div class="first-layer">
-            <img src="../static/pic/CuSell_icon.jpeg" alt="Icon">
+            <img src="../../../static/pic/CuSell_icon.jpeg" alt="Icon">
         </div>
         <div class="second-layer"></div>
         <div class="third-layer">
@@ -23,7 +23,7 @@
             </svg>
         </div>
         <div class="forth-layer">
-        <img src="../static/pic/CuSell_icon.png" alt="1">
+        <img src="../../../static/pic/CuSell_icon.png" alt="1">
         </div>
         
     </div>
