--- a/templates/registration.html
+++ b/templates/registration.html
@@ -132,7 +132,7 @@
             </div>
             
             <script>
-                $("#submit-button").click(function(){
+                $("#signupForm").submit(function(){
                     var userName = $("#userName").val();
                     var email = $("#inputEmail").val();
                     var passwd = $("#confirmPassword").val();
