--- a/templates/registration.html
+++ b/templates/registration.html
@@ -128,12 +128,9 @@
             </div>
 
             <div class="d-grid gap-2">
-                {% csrf_token %}
+                <span style="display: none;">{% csrf_token %}</span>
                 <button id="submit-button" type="submit" class="disabled btn btn-primary mb-2">Submit</button>
             </div>
-            
-            
-
         </form>
     </div> 
     
