--- a/templates/icon.html
+++ b/templates/icon.html
@@ -23,7 +23,7 @@
             </svg>
         </div>
         <div class="forth-layer">
-        <img src="../../../static/pic/CuSell_icon.png" alt="#" style="filter:drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5))">
+        <img src="../../../static/pic/CuSell_icon.png" alt="#">
         </div>
     </div>
 </body>
