--- a/templates/profile.html
+++ b/templates/profile.html
@@ -77,7 +77,7 @@
         </script>
 
         <div id="userName-box" style="display: flex; margin-top: 10px;">
-            <p id="userName" style="font-size: xx-large; margin-left: 40px; color: rgb(230, 150, 0);">
+            <p id="userName" style="font-size: xx-large; margin-left: 40px;">
                 <b>{{userName}}</b>
             </p>
             <a href="#" id="userName-icon" class="transparent" style="pointer-events: none;">
