--- a/templates/registration.html
+++ b/templates/registration.html
@@ -122,6 +122,15 @@
                 <input id="confirmPassword" type="password" placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;" class="form-control" name="confirmPassword">
             </div>
 
+            <div class="input-group mb-2" style="margin: 0; padding: 0;">
+                <div style="width: 208px;">
+                    <input id="inputVerify" placeholder="Verification Code" class="form-control" name="verify" aria-describedby="verifyHelp">
+                </div>
+                <div class="d-grid gap-2">
+                    <button id="send-button" type="submit" class="btn btn-primary mb-2" style="width: 80px; margin-left: 10px;">Send</button>
+                </div>
+            </div>
+
             <div class="mb-3 form-check">
                 <input type="checkbox" id="agree" name="agree" value="agree" class="form-check-input"/>
                 <label class="form-check-label">Please confirm that you are a current CUHK student/staff.</label>
