--- a/templates/registration.html
+++ b/templates/registration.html
@@ -123,7 +123,7 @@
             </div>
 
             <div class="input-group mb-2">
-                <input id="sent" class="form-control" name="sent" style="display: none" value={{ sent }}>
+                <input id="sent_veriCode" class="form-control" name="sent_veriCode" style="display: none" value={{ sent_veriCode }}>
             </div>
 
             <div class="input-group mb-2" style="margin: 0; padding: 0;">
@@ -205,7 +205,7 @@
                     $("#confirmPassword").hasClass("is-invalid") ||
                     $("#inputEmail").hasClass("is-invalid") || 
                     $("#inputName").hasClass("is-invalid")){
-                        {#$("#submit-button").addClass("disabled");#}
+                        {$("#submit-button").addClass("disabled");}
                 };
             },
             unhighlight: function (element, errorClass, validClass) {
@@ -214,7 +214,7 @@
                     $("#confirmPassword").hasClass("is-valid") &&
                     $("#inputEmail").hasClass("is-valid") &&
                     $("#userName").hasClass("is-valid")){
-                        {#$("#submit-button").removeClass("disabled");#}
+                        {$("#submit-button").removeClass("disabled");}
                 };
             }
         });
