--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,16 +60,12 @@ nav .navigator{
   height: 500px;
   margin: 20px;
   margin-bottom: 0;
-  animation: show 1s;
-  animation-fill-mode:forwards;
 }
-@keyframes show{
-  0% {margin-top: 1000px;}
-  100% {margin-top: 50px;}
-}
+
 .container .bg .card{
   width: 100%;
   height: 100%;
+  margin-top: 80px;
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
   background-color: rgba(255, 255, 255, 0.1);
@@ -84,17 +80,21 @@ nav .navigator{
 @keyframes shadowPulse {
   0% {
       box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+      transform: scale(1, 1);
   }
   100% {
       box-shadow: 35px 35px 65px rgba(0, 0, 0, 0.5);
+      transform: scale(1.1, 1.1);
   }
 }
 @keyframes shadowPulseInverse {
   0% {
       box-shadow: 35px 35px 65px rgba(0, 0, 0, 0.5);
+      transform: scale(1.1, 1.1);
   }
   100% {
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    transform: scale(1, 1);
   }
 }
 .shadow-pulse {
@@ -113,21 +113,7 @@ nav .navigator{
   padding: 10px;
   text-align: center;
 }
-.container .bg .card .content h2{
-  position: absolute;
-  top: -20px;
-  right: 10px;
-  font-size: 7em;
-  color: rgba(83, 83, 83, 0.2);
-}
-.container .bg .card .content h3{
-  position: relative;
-  top: -100px;
-  font-size: 2em;
-}
-.container .bg .card .content p{
-  position: relative;
-}
+
 
 .reg-form{
   align-items: flex-start;
