--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -205,6 +205,15 @@
             })
         </script>
 
+        <div id="error-box" style="display: none;"></div>
+        <script>
+            var error = "{{error}}";
+             $("#error-box").bind("DOMNodeInserted",function(e){
+                alert(error)
+            });
+            $('#error-box').html(error);
+        </script>
+
     </body>
 
 
