--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -36,8 +36,8 @@
                                     <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
                                 </svg>
                                 Home</a></li>
-                            <li><a id="profile" href="#" class="nav-link px-2 text-white top_item">Profile</a></li>
-                            <script>
+                            <li><a id="profile" href="/templates/profile.html" class="nav-link px-2 text-white top_item">Profile</a></li>
+                            <!-- <script>
                                 var userStatus = 0;
                                 $("#profile").click(function() {
                                     if (userStatus == 0) {
@@ -46,7 +46,7 @@
                                         $("#profile").attr("href", "/templates/profile.html")
                                     }
                                 });
-                            </script>
+                            </script> -->
                             <li><a href="#" class="nav-link px-2 text-white top_item">Liked</a></li>
                             <li><a href="#" class="nav-link px-2 text-white top_item">Chat</a></li>
                             <li><a target="_blank" href="https://github.com/1155141394/CuSell" class="nav-link px-2 text-white top_item">About Us</a></li>
@@ -124,7 +124,7 @@
                     </div>
                 </div>
             </div>
-            <img class="cu_img" src="../../../static/pic/CuSell_glow.png" alt="CuSell" height="200px" width="400px">
+            <img class="cu_img" src="../../../static/pic/CuSell.png" alt="CuSell" height="200px" width="400px">
         </div>
         
         <div class="container">
