--- a/templates/profile.html
+++ b/templates/profile.html
@@ -35,7 +35,7 @@
                 <div style="padding-right: 10px; display: flex; align-items: center;">
                     <p style="color: white; margin-bottom: 0; font-size: larger; margin-right: 10px;">Hello, {{user.name}}!</p>
                     <div id="user-head-nav">
-                        <img src={{ user.portrait }} height="30px" width="30px">
+                        <img src={{ user.portrait }} height=100% width=100%>
                     </div>
                 </div>
 
@@ -62,7 +62,7 @@
                     <input id="upload-head" type="file" style="display: none;">
                 </div>
             </div>
-            <img src={{ user.portrait }} height="300px" width="300px">
+            <img src={{ user.portrait }} height=100% width=100%>
         </div>
 
         <script>
